# epsrc-eufs-msgs

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
action/: CheckForObjects.action
msg/: AckermannDriveStamped.msg  BoundingBox.msg  CanState.msg  CarState.msg  ConeArray.msg  ConeWithCovariance.msg  LapStats.msg  SLAMState.msg  SlamEval.msg  SystemStatus.msg  TopicState.msg  TopicStatus.msg  WheelSpeeds.msg  WheelSpeedsStamped.msg  canState.msg  coneArray.msg
src/eufs_msgs/: CMakeLists.txt  package.xml
src/eufs_msgs/msg/: coneArray.msg
